MODORDERS-1105. Update after Sonar review